# n2-arachne

./: .gitignore  .npmignore  CHANGELOG.md  PLAN.md  README.ja.md  README.ko.md  README.md  config.default.js  index.js  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
data-hybrid-bench/: benchmark-report.json
docs/: README.md
lib/: README.md  assembler.js  backup.js  chunker.js  config.js  dependency.js  embedding.js  ignore.js  indexer.js  search.js  store.js  vector-store.js
native/: Cargo.toml  README.md  build.rs
native/src/: bm25.rs  chunker.rs  indexer.rs  lib.rs  vector.rs
src/: README.md  index.ts  types.ts
src/lib/: README.md  assembler.ts  backup.ts  chunker.ts  config.ts  dependency.ts  embedding.ts  ignore.ts  indexer.ts  kv-bridge.ts  native-bridge.ts  search.ts  store.ts  vector-store.ts
src/tools/: README.md  context-tools.ts
test/: README.md  bench-10mb.js  bench-1gb.js  bench-cached.js  bench-hybrid-engine.js  bench-hybrid.js  bench-memory.js  bench-pipeline.js  bench-scale.js  bench-semantic.js  test-assembler.js  test-benchmark.js  test-indexer.js  test-kv-bridge.js  test-semantic.js  test-stability.js
tools/: README.md  context-tools.js
